[project]
name = "micro-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.4.0",
    "beautifulsoup4>=4.13.3",
    "datasets>=3.3.2",
    "diffusers>=0.32.2",
    "easydict>=1.13",
    "einops>=0.8.1",
    "fastparquet>=2024.11.0",
    "huggingface-hub>=0.29.1",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "torchmetrics>=1.6.1",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
]
